@@ -82,7 +82,15 @@ order to mainatin a UI consistent for all GNOME applications.
 To discuss gtk2-perl, ask questions and flame/praise the authors,
 join gtk-perl-list@gnome.org at lists.gnome.org.
 
-Find out more about Gnome+ at http://www.gnome.org.
+Find out more about GNOME at http://www.gnome.org.
+
+=head1 DEPRECATION WARNING
+
+With the release of GTK+ 2.10 both libgnomeprint and libgnomeprintui have
+been marked as deprecated and should not be used in newly released code.
+
+In order to use the new Print support in GTK+ you have to use the Gtk2
+module version E<gt>= 1.140 compiled against GTK+ E<gt>= 2.10.0.
 
 =head1 SEE ALSO
 
@@ -95,7 +103,7 @@ muppet E<lt>scott at asofyet dot orgE<gt>
 
 =head1 COPYRIGHT AND LICENSE
 
-Copyright 2003, 2004 by Emmanuele Bassi
+Copyright 2003-2006 by Emmanuele Bassi
 
 Copyright 2003 by muppet
 
