@@ -1,4 +1,4 @@
-Copyright (C) 2003-2004 by the gtk2-perl team.
+Copyright (C) 2003-2006 by the gtk2-perl team.
 
 This software is licensed under the LGPL.  See L<Gnome2::Print> for a full
 notice.
